edited FWA, added new MDP mobile images, edited ANG

--- a/FWA/index.html
+++ b/FWA/index.html
@@ -21,7 +21,7 @@
 			});
 			
 			jQuery(".tab_content").hide(); //Hide all content
-				jQuery("div.buttonContainer .button:first").addClass("active").show(); //Activate first tab
+//				jQuery("div.buttonContainer .button:first").addClass("active").show(); //Activate first tab
 				jQuery(".tab_content:first").show(); //Show first tab content
 			
 				//On Click Event
@@ -84,7 +84,7 @@
 		<div class="container_12 bottomContentWrapper">
 			<div class="grid_7 push_3 ">
 				<h2>An untimely divorce.  The sale of your business.  A large inheritance.</h2>
-				<p>For affluent individuals, each one of these situations possesses its own unique set of challenges…and possibilities.</p>
+				<p>For affluent individuals, each one of these situations possesses its own unique set of challenges...and possibilities.</p>
 				<p>That&rsquo;s why Freedom Advisors was created, to help you make the most of your life and your wealth, whatever 
 				the circumstances may be. We&rsquo;re experts in helping you evaluate and manage change, whether it&rsquo;s anticipated 
 				or unexpected. </p>
